# panorama_viewer

./: CMakeLists.txt  cubemap2panorama.cpp  panoramaviewer.cpp  readme.md
Compiled version/: c2p.txt  input.txt  pano.txt  std_output.txt
Examples/: readme.md
Examples/cubemap/: _#1.tga  _#2.tga  _#3.tga  _#4.tga  _#5.tga  _#6.tga
shaders/: c2p.txt  pano.txt
